Fix inconsistency in comment badge spacing

--- a/src/scss/comments.scss
+++ b/src/scss/comments.scss
@@ -472,7 +472,7 @@
     text-shadow: none;
     border-radius: 2px;
     padding: 0 4px;
-    margin-left: 4px;
+    margin-left: 1px;
     height: 16px;
     transform: translateY(-1px);
 
